qtbase-opensource-src (5.7.0+dfsg-3ubuntu1) UNRELEASED; urgency=medium

  * New upstream release.
  * Drop patches included in upstream release:
    - color-fonts.patch
    - dbusmenu_exclusive_groups.diff
    - dbusmenu_global_menu.diff
    - dbustray_use_separate_connections.diff
    - qplatformmenubar_createmenu.diff
  * Update symbols and mark private ones.

 -- Timo Jyrinki <timo-jyrinki@ubuntu.com>  Thu, 25 Aug 2016 11:01:48 +0000

qtbase-opensource-src (5.7.0+dfsg-4) UNRELEASED; urgency=medium

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Require pkg-kde-tools (>= 0.15.17~) to allow using backported versions.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 16 Jul 2016 21:32:48 -0300

qtbase-opensource-src (5.7.0+dfsg-3) experimental; urgency=medium

  * Replace qdevicediscovery_dummy.diff with a proper patch from upstream.
  * Update debian/libqt5dbus5.symbols once again.
  * Mark private symbols using pkgkde-mark-qt5-private-symbols.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 05 Jul 2016 21:10:28 +0300

qtbase-opensource-src (5.7.0+dfsg-2) experimental; urgency=medium

  * Add a patch (qdevicediscovery_dummy.diff) to fix a linking error on
    GNU/kFreeBSD.
  * Add support for ARMv4 architecture, needed to get armel builds working.
  * Update debian/libqt5dbus5.symbols from buildds’ logs.

 -- Dmitry Shachnev <mitya57@debian.org>  Fri, 01 Jul 2016 19:59:52 +0300

qtbase-opensource-src (5.7.0+dfsg-1) experimental; urgency=medium

  * New upstream release.
  * Drop debian/scripts/migrate-symbols.py, no longer needed.
  * Drop lib/fonts/* from excluded files, these are no longer shipped
    (since upstream commit c5ceabb9a1caf6b9).
  * Refresh patches for the new release.
  * Update for upstream GTK+ 3 port:
    - Build-depend on libgtk-3-dev.
    - Rename libqt5libqgtk2 to qt5-gtk-platformtheme.
    - Make it a recommendation of libqt5gui5 rather than a suggestion.
  * Update debian/qtbase5-dev.install-common for the new release.