@@ -17,7 +17,7 @@ armv4.diff
 # Ubuntu specific.
 qt5-qmake-arm-linux-gnueabihf
 Add-workaround-for-GL-on-Android-emulator.patch
-#enable-tests.patch
+enable-tests.patch
 skip-largefile-test-s390x.patch
 net-bearer-nm-disconnect-ap-signals7.patch
 qnam-ubuntu-fix6.patch
