@@ -8,6 +8,7 @@ qtbase-opensource-src (5.7.0+dfsg-3ubuntu1) UNRELEASED; urgency=medium
     - dbustray_use_separate_connections.diff
     - qplatformmenubar_createmenu.diff
   * Update symbols and mark private ones.
+  * Adjust tests enablement patch for Qt 5.7.
 
  -- Timo Jyrinki <timo-jyrinki@ubuntu.com>  Thu, 25 Aug 2016 11:01:48 +0000
 
